# InsightDebateBot

./: .dockerignore  .gitignore  DOCKER_VERIFICATION.md  Dockerfile  LICENSE  README.md  USER_GUIDE.md  bot_settings.db  docker-compose.yml  env.template  inspect_api.py  inspect_models.py  inspect_protos.py  inspect_upload.py  list_models.py  list_models_new.py  main.py  test_tools.py
.github/workflows/: build.yml
insight_bot/: analyzer.py  audio_processor.py  bot.py  config.py  database.py  recorder.py  requirements.txt  session_manager.py
insight_bot_rust/: Cargo.toml  Dockerfile  bot_settings.db
insight_bot_rust/src/: analyzer.rs  bot.rs  config.rs  database.rs  main.rs  session.rs
insight_bot_rust/src/audio/: mod.rs  processor.rs  recorder.rs
insight_bot_rust/src/commands/: analyze.rs  mod.rs  settings.rs
