[package]
name = "insight_bot"
version = "0.1.0"
edition = "2021"
description = "Discord voice chat analysis bot with Opus recording"
authors = ["InsightDebateBot Team"]

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
    "cache",
] }
songbird = { version = "0.4", features = ["driver", "receive"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Audio processing - using opus via songbird, no separate crate needed
# Songbird handles Opus internally
ogg = "0.9"

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration
dotenvy = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2.0"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6.1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = false
codegen-units = 16
strip = true
